--- a/pages/refund.html
+++ b/pages/refund.html
@@ -3,14 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Hisab Tracker</title>
+    <title>Refund Policy | Hisab Tracker</title>
     <meta
       name="description"
-      content="Track all your money offline first. Hisab Tracker works without internet, no sign-up required to start, with smart sync across devices when you're ready."
+      content="Read the Refund Policy of Hisab Tracker. Learn about free trials, subscriptions, billing terms, and refund conditions."
     />
+
     <meta
       name="keywords"
       content="expense tracker, money manager, hisab tracker, budget app, finance app india, personal finance, offline expense tracker"
+    />
+    <!-- ===== SEO CORE ===== -->
+    <link rel="canonical" href="https://hisabtracker.com/pages/refund.html" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="geo.region" content="IN" />
+    <meta name="geo.placename" content="India" />
+
+    <!-- ===== OPEN GRAPH (SOCIAL SHARING) ===== -->
+    <meta property="og:title" content="Refund Policy | Hisab Tracker" />
+    <meta
+      property="og:description"
+      content="Understand Hisab Tracker’s refund, trial, and subscription policies clearly."
+    />
+    <meta
+      property="og:url"
+      content="https://hisabtracker.com/pages/refund.html"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="Hisab Tracker" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+
+    <!-- ===== TWITTER CARD ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Refund Policy | Hisab Tracker" />
+    <meta
+      name="twitter:description"
+      content="Subscription, trial, and refund rules explained by Hisab Tracker."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
     />
 
     <!-- Font Awesome -->
@@ -220,7 +273,7 @@
             <h3>Legal</h3>
             <ul class="footer-links">
               <li>
-                <a href="#"
+                <a href="./policy.html"
                   ><i class="fas fa-chevron-right"></i> Privacy Policy</a
                 >
               </li>
@@ -235,7 +288,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="./refund.html"
                   ><i class="fas fa-chevron-right"></i> Refund Policy</a
                 >
               </li>
