--- a/pages/security.html
+++ b/pages/security.html
@@ -3,14 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Hisab Tracker</title>
+    <title>Data Security | Hisab Tracker</title>
     <meta
       name="description"
-      content="Track all your money offline first. Hisab Tracker works without internet, no sign-up required to start, with smart sync across devices when you're ready."
+      content="Learn how Hisab Tracker protects your data with offline-first storage, encryption, and strict privacy controls."
     />
+    <!-- ===== SEO CORE ===== -->
+    <link rel="canonical" href="https://hisabtracker.com/pages/security.html" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="geo.region" content="IN" />
+    <meta name="geo.placename" content="India" />
+
+    <!-- ===== OPEN GRAPH (SOCIAL SHARING) ===== -->
+    <meta property="og:title" content="Data Security | Hisab Tracker" />
+    <meta
+      property="og:description"
+      content="How Hisab Tracker secures your financial data with offline-first protection and encryption."
+    />
+    <meta
+      property="og:url"
+      content="https://hisabtracker.com/pages/security.html"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="Hisab Tracker" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+
+    <!-- ===== TWITTER CARD ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Data Security | Hisab Tracker" />
+    <meta
+      name="twitter:description"
+      content="Your financial data security explained by Hisab Tracker."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+
     <meta
       name="keywords"
       content="expense tracker, money manager, hisab tracker, budget app, finance app india, personal finance, offline expense tracker"
+    />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
     />
 
     <!-- Font Awesome -->
@@ -237,7 +290,7 @@
             <h3>Legal</h3>
             <ul class="footer-links">
               <li>
-                <a href="#"
+                <a href="./policy.html"
                   ><i class="fas fa-chevron-right"></i> Privacy Policy</a
                 >
               </li>
@@ -247,7 +300,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="./security.html"
                   ><i class="fas fa-chevron-right"></i> Data Security</a
                 >
               </li>
