--- a/index.html
+++ b/index.html
@@ -12,6 +12,68 @@
       name="keywords"
       content="expense tracker, money manager, hisab tracker, budget app, finance app india, personal finance, offline expense tracker"
     />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <!-- ===== SEO CORE ===== -->
+    <link rel="canonical" href="https://hisabtracker.com/" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="geo.region" content="IN" />
+    <meta name="geo.placename" content="India" />
+
+    <!-- ===== OPEN GRAPH (WhatsApp, Facebook, LinkedIn) ===== -->
+    <meta
+      property="og:title"
+      content="Hisab Tracker – Offline Personal Finance App"
+    />
+    <meta
+      property="og:description"
+      content="Track all your money offline. No internet. No signup. Built for India."
+    />
+    <meta property="og:url" content="https://hisabtracker.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Hisab Tracker" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+
+    <!-- ===== TWITTER CARD ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Hisab Tracker – Offline Expense Tracker"
+    />
+    <meta
+      name="twitter:description"
+      content="Offline-first money tracking app for India."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
 
     <!-- Font Awesome -->
     <link
@@ -1062,6 +1124,24 @@
           i % 2 === 0 ? 'var(--primary-dark)' : 'var(--secondary-dark)'
         element.style.animationDelay = `${Math.random() * 15}s`
         floatingElementsContainer.appendChild(element)
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Hisab Tracker",
+        "operatingSystem": "ANDROID",
+        "applicationCategory": "FinanceApplication",
+        "description": "Offline-first personal finance app for India.",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "INR"
+        },
+        "sameAs": [
+          "https://play.google.com/store/apps/details?id=com.hisabtracker"
+        ]
       }
     </script>
   </body>
