--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,14 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hisab Tracker - Your Personal Finance Command Center</title>
+    <title>Contact Hisab Tracker | Support & Queries</title>
     <meta
       name="description"
-      content="Track all your money offline first. Hisab Tracker works without internet, no sign-up required to start, with smart sync across devices when you're ready."
+      content="Contact the Hisab Tracker team for support, feedback, or partnership queries. We’re here to help you with offline money tracking."
     />
+
     <meta
       name="keywords"
       content="expense tracker, money manager, hisab tracker, budget app, finance app india, personal finance, offline expense tracker"
+    />
+    <!-- ===== SEO CORE ===== -->
+    <link rel="canonical" href="https://hisabtracker.com/pages/contact.html" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="geo.region" content="IN" />
+    <meta name="geo.placename" content="India" />
+
+    <!-- ===== OPEN GRAPH (SOCIAL SHARING) ===== -->
+    <meta property="og:title" content="Contact Hisab Tracker" />
+    <meta
+      property="og:description"
+      content="Get in touch with Hisab Tracker for support, feedback, or business inquiries."
+    />
+    <meta
+      property="og:url"
+      content="https://hisabtracker.com/pages/contact.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Hisab Tracker" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+
+    <!-- ===== TWITTER CARD ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contact Hisab Tracker" />
+    <meta
+      name="twitter:description"
+      content="Reach out to the Hisab Tracker team for help and support."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
     />
 
     <!-- Font Awesome -->
@@ -68,7 +128,7 @@
             <a href="#core-features" class="nav-link">Features</a>
 
             <a href="./about.html" class="nav-link">About</a>
-            <a href="pages/contact.html" class="nav-link active">Contact</a>
+            <a href="./contact.html" class="nav-link active">Contact</a>
           </nav>
 
           <div class="header-actions">
