--- a/pages/term.html
+++ b/pages/term.html
@@ -3,14 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Hisab Tracker</title>
+    <title>Terms of Service | Hisab Tracker</title>
     <meta
       name="description"
-      content="Track all your money offline first. Hisab Tracker works without internet, no sign-up required to start, with smart sync across devices when you're ready."
+      content="Read the Terms of Service for Hisab Tracker. Learn about usage rules, data responsibility, and limitations of liability."
     />
+    <!-- ===== SEO CORE ===== -->
+    <link rel="canonical" href="https://hisabtracker.com/pages/term.html" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="geo.region" content="IN" />
+    <meta name="geo.placename" content="India" />
+
+    <!-- ===== OPEN GRAPH (SOCIAL SHARING) ===== -->
+    <meta property="og:title" content="Terms of Service | Hisab Tracker" />
+    <meta
+      property="og:description"
+      content="Understand the rules and conditions for using the Hisab Tracker app and services."
+    />
+    <meta
+      property="og:url"
+      content="https://hisabtracker.com/pages/term.html"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="Hisab Tracker" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+
+    <!-- ===== TWITTER CARD ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Terms of Service | Hisab Tracker" />
+    <meta
+      name="twitter:description"
+      content="Terms and conditions for using Hisab Tracker explained clearly."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+
     <meta
       name="keywords"
       content="expense tracker, money manager, hisab tracker, budget app, finance app india, personal finance, offline expense tracker"
+    />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dvhjtth5f/image/upload/v1763839566/hisabTrackerOnlyImage_eyqbuq.png"
     />
 
     <!-- Font Awesome -->
@@ -236,7 +289,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="./term.html"
                   ><i class="fas fa-chevron-right"></i> Terms of Service</a
                 >
               </li>
