--- a/pages/delete-account.html
+++ b/pages/delete-account.html
@@ -62,8 +62,12 @@
           <h2>What remains on your device</h2>
 
           <ul>
-            <li>Local offline data stored only on your device</li>
-            <li>This can be removed by uninstalling the app</li>
+            <li>Local device data stored only on your phone</li>
+            <li>This will be removed when you uninstall the app</li>
+            <li>
+              If you have signed in or enabled cloud backup, you must use the
+              in-app delete feature or email us to remove cloud data
+            </li>
           </ul>
         </div>
 
